fixes on mobile view

--- a/src/app/pages/signup/stye.scss
+++ b/src/app/pages/signup/stye.scss
@@ -77,7 +77,7 @@
 
                 .sign-in{
                     margin-left: 2px;
-                    color: #4e9fe5;
+                    color: #DB4444;
                     font-size: 12px;
                     text-decoration: none;
                 }
